# Emulator-of-human-behaviour

./: CMakeLists.txt  README.md  emulator_app_ru_RU.ts  main.cpp
UI_classes/: adddevicesconfig.cpp  adddevicesconfig.h  adddevicesconfig.ui  eventswindow.cpp  eventswindow.h  eventswindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  scenarioswindow.cpp  scenarioswindow.h  scenarioswindow.ui  scenexecution.cpp  scenexecution.h  scenexecution.ui
functional_classes/: db_object.h  device.cpp  device.h  event.cpp  event.h  helper.cpp  helper.h  scenario.cpp  scenario.h
sqlite_DB/: initialization.cpp  sqlite_db.cpp  sqlite_db.h  zig_bee_devs.cpp
